# VirtualAssembler

./: .gitignore  CMakeLists.txt  HelloWorld.asm  Main.cpp  README.md  binary_converter  binary_converter.cpp  binary_converter.h  binary_converter_tests.cc  build.sh  buildAndRunTests.sh  buildProject.sh  main.cpp  makefile
asm/: BranchingTest.asm  Compare.asm  P4.asm  P5.asm  SumArray.asm
asm/invalid/: weNoCode.asm
asm/test/invalid/: weNoCode.asm
asm/test/valid/: AddFunction.asm  BranchingTest.asm  Fib.asm  P4.asm  StringTest.asm  we.asm
design/: .$ClassUML.drawio.bkp  .$ClassUML.drawio.dtmp  .$SequenceChart.drawio.bkp  ClassUML.drawio  SequenceChart.drawio
design/drawio/: .$ClassUML.drawio.bkp  .$ClassUML.drawio.dtmp  .$SequenceChart.drawio.bkp  .$SequenceChart.drawio.dtmp  ClassUML.drawio  SequenceChart.drawio
design/drawio/P1/: .$ClassUML.drawio.bkp  .$ClassUML.drawio_1.dtmp
include/: Assembly.h  Directive.h  DirectiveInt.h  Memory.h  MemoryException.h  Opcodes.h  Operation.h  OperationAdd.h  OperationDiv.h  OperationException.h  OperationFactory.h  OperationJump.h  OperationLDB.h  OperationLDR.h  OperationMove.h  OperationMul.h  OperationSTB.h  OperationSTR.h  OperationSub.h  OperationTrap0.h  OperationTrap1.h  OperationTrap2.h  OperationTrap3.h  OperationTrap4.h  Operations.h  PassOneException.h  PassTwoException.h  Registers.h  Token.h  TokenAdd.h  TokenBgt.h  TokenBlt.h  TokenBnz.h  TokenBrz.h  TokenByte.h  TokenDiv.h  TokenInstr.h  TokenInstruction.h  TokenInt.h  TokenJmp.h  (+17 more)
src/: Assembly.cpp  DirectiveInt.cpp  Memory.cpp  OperationAdd.cpp  OperationDiv.cpp  OperationJump.cpp  OperationLDB.cpp  OperationLDR.cpp  OperationMove.cpp  OperationMul.cpp  OperationSTB.cpp  OperationSTR.cpp  OperationSub.cpp  OperationTrap0.cpp  OperationTrap1.cpp  OperationTrap2.cpp  OperationTrap3.cpp  OperationTrap4.cpp  TokenAdd.cpp  TokenByte.cpp  TokenDiv.cpp  TokenInt.cpp  TokenJmp.cpp  TokenJmr.cpp  TokenLdb.cpp  TokenLdr.cpp  TokenMove.cpp  TokenMul.cpp  TokenStb.cpp  TokenStr.cpp  TokenSub.cpp  TokenTrap0.cpp  VirtualMachine.cpp  main.cpp
tests/: CMakeLists.txt  asm_tests.cpp  integrated_test.cpp  main_tests.cpp  vm_tests.cpp  we.asm
(+5 files in other folders)
